edited cmake for better google test support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,8 @@
-# Main executable
-add_executable(MVG main.cpp)
-target_link_libraries(MVG ${CONAN_LIBS})
+# src
+
+add_subdirectory(camera_calibration)
+# add_subdirectory(image_reconstruction)
+
+set(Executable_Name MVG.out)
+add_executable(${Executable_Name} main.cpp)
+target_link_libraries(${Executable_Name} ${CONAN_LIBS})
