--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,9 @@
-set(TEST_BIN first_test)
-add_test(
-    NAME ${TEST_BIN}
-    COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TEST_BIN})
-add_executable(${TEST_BIN} first_test.cc)
-target_link_libraries(${TEST_BIN} ${CONAN_LIBS})
+# Tests
+include(GoogleTest)
+
+set(test_name algorithms_test)
+
+add_executable(${test_name} test.cc)
+target_link_libraries(${test_name} ${CONAN_LIBS})
+
+gtest_discover_tests(${test_name})
