--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,11 @@
 # Tests
-include(GoogleTest)
+# include(GoogleTest)
 
 set(test_name algorithms_test)
 
 add_executable(${test_name} test.cc)
 target_link_libraries(${test_name} ${CONAN_LIBS})
 
-gtest_discover_tests(${test_name})
+doctest_discover_tests(${test_name})
+
+# gtest_discover_tests(${test_name})
