--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,6 @@
 add_subdirectory(camera_calibration)
 # add_subdirectory(image_reconstruction)
 
-set(Executable_Name MVG.out)
-add_executable(${Executable_Name} main.cpp)
-target_link_libraries(${Executable_Name} ${CONAN_LIBS})
+set(exe_name mvg_out)
+add_executable(${exe_name} main.cpp)
+target_link_libraries(${exe_name} ${CONAN_LIBS})
