--- a/src/camera_calibration/CMakeLists.txt
+++ b/src/camera_calibration/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Camera Calibration
 
-set(Executable_Name camera_calibration.out)
-add_executable(${Executable_Name} camera_calibration.cc)
-target_link_libraries(${Executable_Name} ${CONAN_LIBS})
+set(exe_name camera_calibration.out)
+add_executable(${exe_name} camera_calibration.cc)
+target_link_libraries(${exe_name} ${CONAN_LIBS})
