--- a/src/camera_calibration/CMakeLists.txt
+++ b/src/camera_calibration/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Camera Calibration
 
-set(exe_name camera_calibration.out)
+set(exe_name camera_calibration)
 add_executable(${exe_name} camera_calibration.cc)
 target_link_libraries(${exe_name} ${CONAN_LIBS})
